Closed Bug 392680 Opened 17 years ago Closed 14 years ago

Clicking Get Mail twice or during startup (while first round not finished) returns modal "This folder is being processed. Please wait until processing is complete to get messages." dialog / error message [pop]

Categories

(Thunderbird :: Mail Window Front End, defect)

defect
Not set
normal

Tracking

(thunderbird3.1 .3-fixed)

VERIFIED FIXED
Thunderbird 3.3a1
Tracking Status
thunderbird3.1 --- .3-fixed

People

(Reporter: dunn5557, Assigned: Bienvenu)

References

()

Details

(Whiteboard: [gs] started with v. 2.0.0.6 (20070728))

Attachments

(1 file, 1 obsolete file)

Using my POP acct (earthlink) Returns frequent "Folder is being processed. Please wait for process to complete before retrieving messages" Steps to Repro: Launch TB Go to WinXP desktop Bring TB back to focus Hit Get Mail Icon twice within a couple of seconds Result. Dialog appears. Expected. First Get Mail Call should Cancel and restart. Note. I am constantly seeing this dialog when I visit mail and hit the get mail icon via "normal" usage... just hitting a single time. I was not seeing this prior to my 2.0.0.6 upgrade.
THe KB really does not address my issues. Just to be clear these folder being processed messages demonstrate new behavior for me since upgrading TB.
Changing title, Double-Clicking GET Mail icon returns Folder Process dialog It turns out the behavior easily occurs when I double or triple click the GET MAIL icon.... This will force the dialog. It seems to me we should simply ignore multiple clicks rather than throwing the folder in process dialog, the dialog provides no real value to the user in this instance... in fact it might be considered an annoyance. (Other mail programs would simply restart the download if Get Mail is clicked a second time.
Summary: New with version 2.0.0.6 (20070728): Frequent Folder being processed dialogs → New with v. 2.0.0.6 (20070728): Dbl Click of Get Mail returns "Folder being processed dialogs"
Also happens on my wife's Macintosh G4 desktop running OS 10.4. It's automatic for me to double click on the Mac, not so much when I use my Sony VAIO laptop.
It's not just double clicking the button that causes this. If you have Thunderbird tracking several pop emails, it could take awhile for it to get all messages. So if you foreground T, it apparently implicitly gets new mail (but for only the currently opened account?). But if you want to GetAllNewMessages, T returns the error message. The error message should not be seen by the user. That T is busy should be an internal implementation detail that should not be visible. T should simply act on the button when it is able to. Currently, the user has to continually hit the button until successful.
(In reply to comment #6) > The error message should not be seen by the user. That T is busy should be an > internal implementation detail that should not be visible. I do think we need a message for user feedback (otherwise you won't know if thunderbird has reacted to your request at all, and you wouldn't see problems), but it could be a notification bar. > TB should simply act > on the button when it is able to. Currently, the user has to continually hit > the button until successful. If it's not bug 466933 ("This folder is being processed" after return from computer sleep mode, with need to restart TB), i. e. if TB is actually processing something, you are right, it would be better if TB automatically resumed my command when finished with the blocking processing. Maybe we could even show a progress bar on the notification bar. I think the major problem is that most of the time we don't know what TB is actually doing or if that it's not doing anything when it claims to process sth. Maybe the UI for the error message should provide more detail.
OS: Windows XP → All
Hardware: x86 → All
Summary: New with v. 2.0.0.6 (20070728): Dbl Click of Get Mail returns "Folder being processed dialogs" → Clicking Get Mail twice (while first round not finished) returns "This Folder is being processed" dialog
Whiteboard: started with v. 2.0.0.6 (20070728)
Version: 2.0 → Trunk
Summary: Clicking Get Mail twice (while first round not finished) returns "This Folder is being processed" dialog → Clicking Get Mail twice (while first round not finished) returns "This Folder is being processed" modal dialog / error message
(In reply to comment #7) > (In reply to comment #6) > > The error message should not be seen by the user. That T is busy should be an > > internal implementation detail that should not be visible. > > I do think we need a message for user feedback (otherwise you won't know if > thunderbird has reacted to your request at all, and you wouldn't see problems), > but it could be a notification bar. A progress bar of some sort would be a good compromise. Anything other than a dialog box, which really should be for true errors. This occurrence here seems rather routine and common.
(In reply to comment #0) > I am constantly seeing this dialog when I visit mail and hit the get mail icon > via "normal" usage... just hitting a single time. I was not seeing this prior > to my 2.0.0.6 upgrade. Michael, by chance did you retest using 2.0.0.4 or 2.0.0.5 to double check? This is important because if we know for sure when the problem got introduced and it wasn't due to environmental factors, we could nail down the patch that caused this. And it's not clear which version you were running prior to 2.0.0.6
Well it was so long ago my memory is too thin, but I routinely updated to the latest at that time so I expect that the TB without the issue was in fact 2.0.0.4 or 2.0.0.5 and it was new with 2.0.0.6. The behavior no longe seems the same usin 3.0... so I am not sure if the issue is reproduciable.
This issue is often reported in forums, in getsatisfaction and newsgroups (http://gsfn.us/t/pngx is but one example) - so it's a common issue, notwithstanding the lack of votes here or duped bugs. And it seems to have gotten worse with v3 [1] - perhaps the likelihood of this has increased due to increased overhead (cpu and disk IO) of syncing and gloda (separately or in combo). Note however, it is not possible for either of these, syncing or gloda, to directly cause the message. bienvenu and I discussed today with on IRC. From a support and QA standpoint, it would be very nice indeed to eliminate spurious or avoidable cases where this message occurs (this bug and perhaps there are others [2]) because: a) it's irritating to the user b) it is difficult / time consuming to differentiate the trivial case where the message means nothing, from cases were the real problem is caused by antivirus, some real problem in thunderbird, or other outside interference. Therefore, requesting this be prioritized as WANTED for v3.1. [1] caveat: some of these will turn about to be caused by other software. Issues documented in http://kb.mozillazine.org/Folder_being_processed - feel free to add any that are missing [2] open bugs which mention folder being processed http://bit.ly/aKH2Bi
blocking-thunderbird3.1: --- → ?
Component: General → Mail Window Front End
QA Contact: general → front-end
Summary: Clicking Get Mail twice (while first round not finished) returns "This Folder is being processed" modal dialog / error message → Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed" modal dialog / error message
Whiteboard: started with v. 2.0.0.6 (20070728) → [gs] started with v. 2.0.0.6 (20070728)
Wanted-thunderbird3+ set; thanks for the nomination, Wayne!
blocking-thunderbird3.1: ? → ---
Flags: wanted-thunderbird+
Next likely bugs to tackle (from http://bit.ly/aKH2Bi which is worth a look see) are perhaps: * bug 288896 - frequent interruptions by popup saying "Cannot move messages to folder <name> because another operation is in progress" [pop3] * bug 101584 - Improve alert for compact folder interruption by biff/auto get msgs. Currently "This folder is being processed. Please wait until processing is complete to get messages." And second wave: * bug 466933 - Error with "Get Mail" or "Get all Messages" after resuming from computer's sleep mode * bug 534403 - Thunderbird 3.0 Mac hangs and will not allow mail collection until rebooted. Intermittent problem. msg "this folder is being processed"
this patch makes it so clicking get new mail while the pop3 server is already running a url returns silently. I've made it return an error, so the error console will show an error, but there won't be a modal alert. It should also fix the case where we're checking for new messages on startup, but biff or the user has done a get new mail before the check for new messages on startup happens, because I also made that code silently return if we're aleady running a url on the pop3 server. Perhaps I'll generate a try server build with this patch for folks to try. Wayne, perhaps you could spread the word to the interesting bugs once I've generated a try server build. I'll do a 3.0.3pre build to make it a bit safer for folks.
Assignee: nobody → bienvenu
Status: NEW → ASSIGNED
David, what if the user is expanding the scope of the request? For example, let's say the pop3 server is in the middle of getting mail for a single mail account. The user has requested "Get Mail -> Get All New Messages" to get mail for all mail accounts. If TB silently drops the error message, the net result is the UI press was ignored. If the new request was equal to the old one, it is redundant and rightfully dropped. But if the new request is an escalation, it is not redundant and should take effect.
our "pop3 server" really means a pop3 account, i.e., the combination of hostname and username == "pop3 server" in the code. So it's all fine.
http://s3.mozillamessaging.com/build/try-server/2010-03-05_14:30-bienvenu@nventure.com-1267828045/bienvenu@nventure.com-1267828045-mail-try-win32.installer.exe - Here's a windows try server build that supresses the alert if get new mail is run when the server is currently running a url (linux and mac builds have the same 1267828045 identifier.
How will this impact the situation in Bug 466933. i.e. where the message appears but there is no other task happening, if I understand Comment 17 correctly then no error message will appear and the user will not realise that there is a problem (which requires restarting TB before it will get mail again). On OSX - I see bug 466933 at least 50% of the times I restart from sleep, and i think most OSX users don't shut down, they just sleep/restart for days. So I think it important that the patch doesn't make things worse for that case.
Mitra, it depends. I'm not suppressing the folder lock error; I'm just not doing a get new mail if the pop3 server/account is currently running a url, which is different from having the folder locked. Now, it may be the case that the same bug that leaves the folder locked also leaves the pop3 server/account thinking that it is running a url, in which case this patch would suppress that error message. But if you're seeing this bug all the time, you can try a try server build and report back if you see an error when doing a manual get new mail after awaking from sleep.
> http://s3.mozillamessaging.com/build/try-server/2010-03-05_14:30-bienvenu@nventure.com-1267828045/bienvenu@nventure.com-1267828045-mail-try-win32.installer.exe no change in behavior for me using ... Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.3a3pre) Gecko/20100305 Shredder/3.2a1pre 9286152 B 2010-03-06T01:39:38.000Z build/try-server/2010-03-05_14:30-bienvenu@nventure.com-1267828045/bienvenu@nventure.com-1267828045-mail-try-win32.installer.exe
bienvenu, this isn't a blocker, but is it possible to drive in "best available patch" for v3.1? i.e. even if it doesn't fix the reporter, or the whole ball of wax.
Comment on attachment 430720 [details] [diff] [review] don't alert if the pop3 server is running a url Now that I've fixed the sleep/wake-up issue (bug 466933), I think this is reasonable to do for 3.1
Attachment #430720 - Flags: superreview?(neil)
Attachment #430720 - Flags: review?(neil)
Comment on attachment 430720 [details] [diff] [review] don't alert if the pop3 server is running a url I'm not a big user of POP3 so I can't really test this, but I'll give you sr. > rv = getMailChainer->GetNewMailForServers(deferredServers, aMsgWindow, inbox, aUrlListener); > } > else >+ { >+ if (m_runningProtocol) >+ return NS_MSG_FOLDER_BUSY; >+ > rv = pop3Service->GetNewMail(aMsgWindow, aUrlListener, inbox, this, getter_AddRefs(url)); >+ } > return rv; IMHO the return inside the if/else block is ugly. Possibilities: 1. rv = getMailChainer->GetNewMailForServers(deferredServers, aMsgWindow, inbox, aUrlListener); } else if (m_runningProtocol) { rv = NS_MSG_FOLDER_BUSY; } else { rv = pop3Service->GetNewMail(aMsgWindow, aUrlListener, inbox, this, getter_AddRefs(url)); } return rv; 2. return getMailChainer->GetNewMailForServers(deferredServers, aMsgWindow, inbox, aUrlListener); } if (!m_runningProtocol) { return pop3Service->GetNewMail(aMsgWindow, aUrlListener, inbox, this, getter_AddRefs(url)); } return NS_MSG_FOLDER_BUSY; 3. As 1. or 2. but switching the cases i.e. whether or not to use !
Attachment #430720 - Flags: superreview?(neil)
Attachment #430720 - Flags: superreview+
Attachment #430720 - Flags: review?(neil)
Shall the review flag be set to standard8 ?
Attachment #430720 - Flags: review?(bugzilla)
Comment on attachment 430720 [details] [diff] [review] don't alert if the pop3 server is running a url r=Standard8 with one of Neil's suggestions as well.
Attachment #430720 - Flags: review?(bugzilla) → review+
bienvenu to land
Summary: Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed" modal dialog / error message → Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed. Please wait for process to complete before retrieving messages." modal dialog / error message
at the end of the day, this seemed cleanest.
Attachment #430720 - Attachment is obsolete: true
Summary: Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed. Please wait for process to complete before retrieving messages." modal dialog / error message → Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed. Please wait for process to complete before retrieving messages." modal dialog / error message [pop]
when the tree opens, I'll try to remember to land this.
Keywords: checkin-needed
the precise message, at least from my testing with 3.1, is "This folder is being processed. Please wait until processing is complete to get messages."
Summary: Clicking Get Mail twice (while first round not finished) returns modal "This Folder is being processed. Please wait for process to complete before retrieving messages." modal dialog / error message [pop] → Clicking Get Mail twice or during startup (while first round not finished) returns modal "This folder is being processed. Please wait until processing is complete to get messages." dialog / error message [pop]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.2a1
nom. for 3.1.3, as this was originally wanted for 3.1. ref: comment 12
blocking-thunderbird3.1: --- → ?
v.fixed for pop Mozilla/5.0 (Windows; Windows NT 5.1; rv:2.0b3pre) Gecko/20100727 Shredder/3.2a1pre
Status: RESOLVED → VERIFIED
(In reply to comment #35) > nom. for 3.1.3, as this was originally wanted for 3.1. ref: comment 12 Wayne, if you want to nominate a patch that is already in trunk, please use the approval flag on a patch or get the author to request approval.
blocking-thunderbird3.1: ? → ---
Comment on attachment 458443 [details] [diff] [review] fix addressing comments. a=Standard8 for 3.1.3, please land on comm-1.9.2 default branch only.
Attachment #458443 - Flags: approval-thunderbird3.1.3+
FYI. Bug 592235 is for improvement of message which is shown when this bug happens. > Bug 592235 : Alert on active folder does not identify Mail Account for > "This folder is being processed. Please wait until processing is complete to get messages."
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: