Bug 392680 Clicking Get Mail twice or during startup (while first round not finished) returns modal "This folder is being processed. Please wait until processing is complete to get messages." dialog / error message [pop]. r=Standard8,sr=Neil